# jepa-wms

./: pyproject.toml  set_env.sh
configs/evals/simu_env_planning/pt/jepa-wm/: pt_L2_cem_sourcedset_H6_nas6_ctxt2_r224_alpha0.1_ep96_decode.yaml
setup/: check_tensors.py  setup_pusht.bash
